tests/NormalTests/paczka1/small_fuzzy/63817685.err
Error in line 6: rFGmO5S A118 91,8
Error in line 3: LwyP S136 69,5
